22 October 2015: Wouter
	- Fix #712: unbound-anchor appears to not fsync root.key.

20 October 2015: Wouter
	- 1.5.6 release.
	- trunk tracks development of 1.5.7.

15 October 2015: Wouter
	- Fix segfault in the dns64 module in the formaterror error path.
	- Fix sldns_wire2str_rdata_scan for malformed RRs.
	- tag for 1.5.6rc1 release.

14 October 2015: Wouter
	- ANY responses include DNAME records if present, as per Evan Hunt's
	  remark in dnsop.
	- Fix manpage to suggest using SIGTERM to terminate the server.

9 October 2015: Wouter
	- Default for ssl-port is port 853, the temporary port assignment
	  for secure domain name system traffic.
	  If you used to rely on the older default of port 443, you have
	  to put a clause in unbound.conf for that.  The new value is likely
	  going to be the standardised port number for this traffic.
	- iana portlist update.

6 October 2015: Wouter
	- 1.5.5 release.
	- trunk tracks the development of 1.5.6.

28 September 2015: Wouter
	- MAX_TARGET_COUNT increased to 64, to fix up sporadic resolution
	  failures.
	- tag for 1.5.5rc1 release.
	- makedist.sh: pgp sig echo commands.

25 September 2015: Wouter
	- Fix unbound-control flush that does not succeed in removing data.

22 September 2015: Wouter
	- Fix config globbed include chroot treatment, this fixes reload of
	  globs (patch from Dag-Erling Smørgrav).
	- iana portlist update.
	- Fix #702: New IPs for for h.root-servers.net.
	- Remove confusion comment from canonical_compare() function.
	- Fix #705: ub_ctx_set_fwd() return value mishandled on windows.
	- testbound selftest also works in non-debug mode.
	- Fix minor error in unbound.conf.5.in
	- Fix unbound.conf(5) access-control description for precedence
	  and default.

31 August 2015: Wouter
	- changed windows setup compression to be more transparent.

28 August 2015: Wouter
	- Fix #697: Get PY_MAJOR_VERSION failure at configure for python
	  2.4 to 2.6.
	- Feature #699: --enable-pie option to that builds PIE binary.